--- a/app/views/deals/_navbar_most_reviewed_m2.html.erb
+++ b/app/views/deals/_navbar_most_reviewed_m2.html.erb
@@ -15,6 +15,7 @@
            <li><button class="filter-button btn btn-md reviewed" data-filter="1k">10,000 +</button></li>
            <li><button class="filter-button btn btn-md reviewed" data-filter="5k">5,000 +</button></li>
            <li><button class="filter-button btn btn-md reviewed" data-filter="1k">1,000 +</button></li>
+           <!-- <input type="text" class="form-control" placeholder="Search here..."> -->
           </div>
         </ul>
       </nav>
