--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -84,6 +84,7 @@
         
         <div class="card_wrap sort-list">
           <%= render 'shared/amz_search' %>
+          <p class="deals_description">Check out the latest Amazon deals featuring hand-picked deals with low prices on top products updated daily. We update this awesome deals every single day so come back again for more savings!</p>
           <%= render 'deals/body_bestdeals' %>
         </div>
         <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_03">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
