--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -4,7 +4,8 @@
   <%= render 'deals/header' %>
   
   <div class="promotions editors_pick common_layout most_wrapper clearfix">
-    <%= render 'deals/navbar_mostreviwed_index' %>
+    <%= render 'deals/navbar_most_index' %>
+    <div class="nav_most_m"><%= render 'deals/navbar_most_index2' %></div>
     <div class="filter-group guide_wrap ">
       <div class="mt_info">
         <h2>Most-Reviewed Products On Amazon</h2> 
