--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -557,11 +557,16 @@
 .filter-node.filter-me {opacity:0 !important; visibility:hidden; position:absolute; top: 2000px;}
 
 @media screen and (max-width:640px){
-  .promotions .featured .sm_pc .amzpromo button{width:105px;}
+  .promotions .featured .sm_pc .amzpromo button{width:105px;display:none;}
   .promotions .featured .sm_pc .amzpromo button.btn-primary{width:30px;margin-left:10px;}
   .promotions .featured .sm_pc .most_rev button{width:140px;}
   .promotions .featured .sm_pc .most_rev button.btn-primary{width:40px;background:#fff;color:#000;margin:0 10px;}
   .promotions .featured .sm_pc .guide_controll button{line-height:15px;font-size:15px;padding-top:15px;}
+
+
+  .promotions .featured .sm_pc .popup_menu button{display:none;}
+  
+
   .promotions .guide_controll{padding-left:20px;}
   .promotions .most_rev, .promotions .amzpromo{padding-left:0;}
   .promotions .guide_controll .btn{margin:0;letter-spacing:0;}
