--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -464,10 +464,13 @@
   .dropmenu li a{padding:0;margin-left:33px;}
 }
 
+.most_body_header{}
+.most_body_header a{text-decoration:none;float:left;width:31.33%;height:200px;margin:1%;overflow:hidden;}
+.most_body_header a img{width:100%;height:100%;object-fit:cover;}
 
 .most_box{float:left;width:18%;margin:1%;overflow:hidden;}
 .most_box a{text-transform:uppercase;}
-.most_box a p{font-size:20px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:#fff;font-weight:bold;text-align:center;}
+.most_box a p, .most_body_header a p{font-size:20px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:#fff;font-weight:bold;text-align:center;}
 .most_box a:hover p{color:rgba(0,205,0,0.5);}
 .most_box img{width:100%;height:170px;object-fit:cover;-webkit-filter:grayscale(85%);filter:gray;border-radius:10px;}
 .most_box img:hover{-webkit-filter:grayscale(0);}
