--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,134 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="55" data-price="9.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZaU52y"><img src="https://m.media-amazon.com/images/I/612feOMlvcL._SR400,400_.jpg" alt="JETERY Water Filter Pitcher" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZaU52y">JETERY Water Filter Pitcher 10 Cup Long-Lasting Purifier with Wooden Handle, Fast Filtration with Patented ACF Military Technology,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.00</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">55DOQIGD</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $19.99</strong> with promo code: <strong class="m_codes">55DOQIGD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZaU52y">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="19.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/326J27L"><img src="https://m.media-amazon.com/images/I/71oA2aC1DWL._SR400,400_.jpg" alt="Carose Salon Grade Professional Hair Dryer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/326J27L">Carose Salon Grade Professional Hair Dryer 1875W AC Motor Negative Ionic Ceramic Far Infrared Blow Dryer With...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.79</span><span class="ori_price">$32.99</span></address>
+      <textarea readonly="readonly" class="code_area">40QKLB5L</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $32.99</strong> with promo code: <strong class="m_codes">40QKLB5L</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/326J27L">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="5.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2zlBnG1"><img src="https://m.media-amazon.com/images/I/61t09gPW24L._SR400,400_.jpg" alt="Headphone Adapter for iPhone 8/8Plus Adaptor " /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2zlBnG1">Headphone Adapter for iPhone 8/8Plus Adaptor for iPhone 7/7Plus/8/8Plus/X/XS Splitter Earphone Convertor 2 in 1 Accessories...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.99</span><span class="ori_price">$14.98</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">609BZJ4I</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $14.98</strong> with promo code: <strong class="m_codes">609BZJ4I</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 27, 2019 at 09:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2zlBnG1">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="7.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NoBngS"><img src="https://m.media-amazon.com/images/I/618+sMHh1UL._SR400,400_.jpg" alt="Y&R Direct Sling Bag Sling Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NoBngS">Y&R Direct Sling Bag Sling Backpack, Shoulder Chest Crossbody Bag Purse Nylon Lightweight Multicolor Small Daypack Outdoor ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">50GYAIIN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.99</strong> with promo code: <strong class="m_codes">50GYAIIN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NoBngS">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="27.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Zh6HW0"><img src="https://m.media-amazon.com/images/I/81IlgQiPPwL._SR400,400_.jpg" alt="Casual Laptop Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Zh6HW0">Casual Laptop Backpack, Large College School Backpack for Men&Women with USB Charging Port, Big Business Computer Bag, Khaki</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.59</span><span class="ori_price">$45.99</span></address>
+      <textarea readonly="readonly" class="code_area">40GYJ8B5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $45.99</strong> with promo code: <strong class="m_codes">40GYJ8B5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 08:00 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Zh6HW0">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="35" data-price="45.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZrAlqS"><img src="https://m.media-amazon.com/images/I/71g5rEgva6L._SR400,400_.jpg" alt="MaxKare Sous Vide Machines Cooker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZrAlqS">MaxKare Sous Vide Machines Cooker with Immersion Circulator Double Digital Display Screens</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$45.49</span><span class="ori_price">$69.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">35D7I23M</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $69.99</strong> with promo code: <strong class="m_codes">35D7I23M</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZrAlqS">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/324NlQX"><img src="https://m.media-amazon.com/images/I/71CzYCdcPsL._SR400,400_.jpg" alt="Vacuum Sealer Machine Food Sealers" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/324NlQX">Vacuum Sealer Machine Food Sealers - Automatic Food Sealer for Food Savers w/Starter Kit, 2 IN 1 Vacuum Sealing System with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">50W1LZKT</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $39.99</strong> with promo code: <strong class="m_codes">50W1LZKT</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/324NlQX">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="50" data-price="13.47">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Zp9OGx"><img src="https://m.media-amazon.com/images/I/611bH8faf7L._SR400,400_.jpg" alt="Siivton Rechargeable LED Camping Lantern" /></a>
