--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -71,7 +71,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Codes | Hand-Pick On Amazon Aug. 24. 2019.</h2>
+          <h2>Promotion Codes | Hand-Pick On Amazon Aug. 25. 2019.</h2>
           <div class="sort_box clearfix">
             <ul>
               <li><a href="/deals/promo_codes" class="pure-button">All Codes</a></li>
@@ -84,7 +84,7 @@
           
           <div class="card_wrap sort-list">
             <%= render 'shared/amz_search' %>
-            <p class="deals_description">This list of Amazon promo codes makes it super easy for you to find great Amazon deals. Save with the verified Amazon coupon codes!! We update this list every single day so come back again for more savings!</p>
+            <%= render 'promocodes_days/note_wadiz' %>
 
             <!-- <div id="movie-card-list">
               <div class="movie-card" data-section="deals">
@@ -103,7 +103,7 @@
  -->
             <%= render 'deals/body_promocode' %>
           </div>
-          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_07">GO TO PROMO CODES OF YESTERDAY</a></h2>
+          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_01">GO TO PROMO CODES OF YESTERDAY</a></h2>
           
         </div><!--./rt_cnt-->    
 
