--- a/app/views/promocodes_days/day_01.html.erb
+++ b/app/views/promocodes_days/day_01.html.erb
@@ -11,7 +11,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Codes We Picked On Amazon Aug. 17. 2019</h2>
+          <h2>Promotion Codes We Picked On Amazon Aug. 24. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -25,6 +25,7 @@
           
           <div class="card_wrap sort-list">
             <%= render 'shared/amz_search' %>
+            <%= render 'promocodes_days/note_wadiz' %>
             <%= render 'promocodes_days/day_01' %>
           </div>
           <p class="updating"><a href="/deals/promo_codes">GO TO TODAY'S PROMO CODES</a></h2>
