--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -69,7 +69,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals | Hand-Pick On Amazon Aug. 24. 2019.</h2>
+        <h2>Daily Deals | Hand-Pick On Amazon Aug. 25. 2019.</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -84,10 +84,10 @@
         
         <div class="card_wrap sort-list">
           <%= render 'shared/amz_search' %>
-          <p class="deals_description">Check out the latest Amazon deals featuring hand-picked deals with low prices on top products updated daily. We update this awesome deals every single day so come back again for more savings!</p>
+          <%= render 'deals_days/note_wadiz' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_03">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_04">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
