--- a/app/views/deals_days/day_04.html.erb
+++ b/app/views/deals_days/day_04.html.erb
@@ -11,7 +11,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Best Deals We Picked On Amazon Aug. 17. 2019</h2>
+          <h2>Best Deals We Picked On Amazon Aug. 24. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -25,6 +25,7 @@
           
           <div class="card_wrap sort-list">
             <%= render 'shared/amz_search' %>
+            <%= render 'deals_days/note_wadiz' %>
             <%= render 'deals_days/day_04' %>
           </div>
           <p class="updating"><a href="/deals/bestdeals">GO TO TODAY'S THE BEST DEALS</a></h2>
