--- a/app/views/deals_days/day_06.html.erb
+++ b/app/views/deals_days/day_06.html.erb
@@ -25,6 +25,7 @@
           
           <div class="card_wrap sort-list">
             <%= render 'shared/amz_search' %>
+            <%= render 'deals_days/note_wadiz' %>
             <%= render 'deals_days/day_06' %>
           </div>
           <p class="updating"><a href="/deals/bestdeals">GO TO TODAY'S THE BEST DEALS</a></h2>
